Move the CSS definition for .invisible into the main HTML file. This should prevent it from ever appearing, such as during loading.

--- a/client/styles/base/global.css
+++ b/client/styles/base/global.css
@@ -167,9 +167,6 @@ td > .button, td > select {
 	box-sizing: border-box;
 }
 
-.invisible {
-	display: none;
-}
 .absolute {
 	position: absolute;
 }
